--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # pkgdev24
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/jeffreyad/pkgdev24/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/jeffreyad/pkgdev24/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of pkgdev24 is to ...
